--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    <section class="py-5 bg-white">
+    <section class="pt-5 bg-white">
         <div class="container">
             <div class="row align-items-center g-5">
 
@@ -86,22 +86,23 @@
                         in a long time.
                     </p>
 
-                    <button class="btn btn-black">
-                        <span>Continue</span>
+                    <a href="about.html" class="btn btn-black">
+                        <span>About us</span>
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 74 74" height="34" width="34">
                             <circle stroke-width="3" stroke="black" r="35.5" cy="37" cx="37"></circle>
                             <path fill="black"
                                 d="M25 35.5C24.1716 35.5 23.5 36.1716 23.5 37C23.5 37.8284 24.1716 38.5 25 38.5V35.5ZM49.0607 38.0607C49.6464 37.4749 49.6464 36.5251 49.0607 35.9393L39.5147 26.3934C38.9289 25.8076 37.9792 25.8076 37.3934 26.3934C36.8076 26.9792 36.8076 27.9289 37.3934 28.5147L45.8787 37L37.3934 45.4853C36.8076 46.0711 36.8076 47.0208 37.3934 47.6066C37.9792 48.1924 38.9289 48.1924 39.5147 47.6066L49.0607 38.0607ZM25 38.5L48 38.5V35.5L25 35.5V38.5Z">
                             </path>
                         </svg>
-                    </button>
+                    </a>
 
                 </div>
 
                 <!-- Image -->
                 <div class="col-lg-6">
-                    <img src="3649fc07df8bc585aea452126ee2d7e516cf6b64-512x512.avif" alt="Speaker on stage"
-                        class="img-fluid rounded-4" />
+                    <div class="  d-flex justify-content-center  align-items-end">
+                        <img src="img/dr-rajive-bhatt-sir.png" alt="Speaker on stage" class="img-fluid rounded-4" />
+                    </div>
                 </div>
 
             </div>
@@ -295,45 +296,63 @@
 
         </div>
     </section>
-    <section class="news-section">
-        <div class="row bg-light">
+    <section class="news-section  bg-white mt-5">
+        <div class="row ">
             <div class="col-md-3">
-                <div class="news-label h-100   d-flex justify-content-center align-items-center">
+                <div class="news-label h-100 d-flex justify-content-center align-items-center">
                     <h3 class="text-dark">Featured in →</h3>
                 </div>
             </div>
             <div class="col-md-9">
-                <div class="swiper news-swiper bg-light">
+                <div class="swiper news-swiper bg-white">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="ABP News">
+                            <a target="_blank"
+                                href="https://www.awazthevoice.in/business-news/rajeev-bhatt-drives-neurodiversity-revolution-in-india-44927.html#:~:text=On%203%20December%202025,%20when,recognition%20of%20a%20single%20achievement.">
+                                <img src="img/feacher/7.svg" alt="ABP News">
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="The Asian Age">
+                            <a target="_blank" href="https://en.sangritimes.com/spotlight/topic/rajeev-bhatt">
+                                <img src="img/feacher/8.webp" alt="The Asian Age">
+                            </a>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <a target="_blank"
+                                href="https://hindi.news18.com/news/delhi/south-delhi-divya-kala-mela-ability-inclusion-community-empowerment-9968064.html">
+                                <img src="img/feacher/10.avif" alt="Financial Express">
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Zee News">
+                            <a target="_blank"
+                                href="https://www.theceo.in/amp/story/press-release/rajeev-bhatt-the-architect-of-indias-neurodiversity-and-inclusion-revolution">
+                                <img src="img/feacher/1.avif" alt="Indian Express">
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Financial Express">
+                            <a href="https://timesofindia.indiatimes.com/blogs/author/rajeev-bhatt/" target="_blank">
+                                <img src="img/feacher/2.png" alt="ABP News">
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Indian Express">
+                            <a target="_blank"
+                                href="https://www.tribuneindia.com/news/business/rajeev-bhatt-the-architect-of-indias-neurodiversity-and-inclusion-revolution/amp">
+                                <img src="img/feacher/3.webp" alt="The Asian Age">
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="ABP News">
+                            <a href="https://www.dainikjagranmpcg.com/national-international/rajeev-bhatt-received-national-award-nation-appreciated-his-three-decades/article-39621
+                                target=" _blank">
+                                <img src="img/feacher/4.png" alt="Zee News">
+                            </a>
                         </div>
+
                         <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="The Asian Age">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Zee News">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Financial Express">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Indian Express">
+                            <a target="_blank"
+                                href="https://www.ptinews.com/press-release/rajeev-bhatt-the-architect-of-india%E2%80%99s-neurodiversity-and-inclusion-revolution/3164031">
+                                <img src="img/feacher/6.jpg" alt="Indian Express">
+                            </a>
                         </div>
                     </div>
                 </div>
